Created hero section

--- a/index.html
+++ b/index.html
@@ -30,6 +30,22 @@
         </ul>
       </div>
     </section>
+
+    <section id="hero">
+      <div class="hero-texts">
+        <h3>Unleash Your Inner Warrior with Vikings E-Shop</h3>
+        <h1>
+          Super Value For<br />
+          Money Deals
+        </h1>
+        <p>
+          Step into the extraordinary realm of Vikings E-Commerce,<br />
+          where the echoes of ancient legends meet the convenience<br />
+          of contemporary shopping.
+        </p>
+        <button>Buy Now</button>
+      </div>
+    </section>
     <script src="script/script.js"></script>
   </body>
 </html>
