Added features section

--- a/index.html
+++ b/index.html
@@ -46,6 +46,42 @@
         <button>Buy Now</button>
       </div>
     </section>
+    <!-- features -->
+    <section id="features" class="section-p1">
+      <!-- box 01 -->
+      <div class="feature-div">
+        <img
+          src="/assets//Features//free-shiping.avif"
+          alt="Free Shipping Image"
+        />
+        <h6 class="shipping-heding">Free Shipping</h6>
+      </div>
+      <!-- box 02 -->
+      <div class="feature-div">
+        <img src="/assets/Features/customer-support.avif" alt="Support Img" />
+        <h6 class="shipping-heding">24/7 Support</h6>
+      </div>
+      <!-- box 03 -->
+      <div class="feature-div">
+        <img src="/assets/Features/happy-sellavif.avif" alt="Happy Sell" />
+        <h6 class="shipping-heding">Happy Sell</h6>
+      </div>
+      <!-- box 04 -->
+      <div class="feature-div">
+        <img src="/assets/Features/online-order-2.avif" alt="Online Order" />
+        <h6 class="shipping-heding">Order Online</h6>
+      </div>
+      <!-- box 05 -->
+      <div class="feature-div">
+        <img src="/assets/Features/promotions.avif" alt="promotions Img" />
+        <h6 class="shipping-heding">Promotions</h6>
+      </div>
+      <!-- box 06 -->
+      <div class="feature-div">
+        <img src="/assets/Features/save-money.avif" alt="Save Money Image" />
+        <h6 class="shipping-heding">Save Money</h6>
+      </div>
+    </section>
     <script src="script/script.js"></script>
   </body>
 </html>
