Features section DONE and implementing the featured collection section

--- a/index.html
+++ b/index.html
@@ -82,6 +82,29 @@
         <h6 class="shipping-heding">Save Money</h6>
       </div>
     </section>
+    <!-- featured products section -->
+    <section id="product-sec" class="section-p1">
+      <div id="sec-heading">
+        <h2>Our Featured Items</h2>
+        <p>Top Collections For Men & Women</p>
+      </div>
+      <div class="product-container">
+        <div id="first-product" class="first-product">
+          <img src="/assets/Featured-Items/mens-cotton.avif" alt="" />
+          <div class="pro-des">
+            <span>Premium Men's Cotton Full Sleeve Shirt</span>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <h4>1799 BDT</h4>
+            <a href="#"><i class="fal fa-shopping-cart"></i></a>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="script/script.js"></script>
   </body>
 </html>
